--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
             border: 1px solid rgba(255,255,255,0.1);
             box-shadow: 0 8px 32px rgba(0,0,0,0.2);
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            overflow-x: auto;
         }
 
         .group:hover {
@@ -182,30 +183,45 @@
         .standings-table {
             width: 100%;
             border-radius: 12px;
-            overflow: hidden;
+            overflow-x: auto;
+            overflow-y: visible;
             margin-top: 16px;
+            -webkit-overflow-scrolling: touch;
         }
 
         .standings-table table {
             width: 100%;
+            min-width: 600px;
             border-collapse: collapse;
         }
 
         .standings-table th {
             background: linear-gradient(135deg, rgba(102, 126, 234, 0.2) 0%, rgba(118, 75, 162, 0.2) 100%);
             color: white;
-            padding: 14px 10px;
-            text-align: left;
-            font-size: clamp(0.75rem, 2vw, 0.9rem);
+            padding: 14px 8px;
+            text-align: center;
+            font-size: clamp(0.7rem, 2vw, 0.85rem);
             font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 0.5px;
+            white-space: nowrap;
+        }
+
+        .standings-table th:nth-child(2) {
+            text-align: left;
+            min-width: 120px;
         }
 
         .standings-table td {
-            padding: 12px 10px;
+            padding: 12px 8px;
             border-bottom: 1px solid rgba(255,255,255,0.05);
-            font-size: clamp(0.8rem, 2vw, 0.95rem);
+            font-size: clamp(0.75rem, 2vw, 0.9rem);
+            text-align: center;
+            white-space: nowrap;
+        }
+
+        .standings-table td:nth-child(2) {
+            text-align: left;
         }
 
         .standings-table tr {
@@ -391,12 +407,21 @@
             }
 
             .group {
-                padding: 20px;
+                padding: 16px;
+            }
+
+            .standings-table {
+                border-radius: 8px;
+            }
+
+            .standings-table table {
+                min-width: 550px;
             }
 
             .standings-table th,
             .standings-table td {
                 padding: 10px 6px;
+                font-size: 0.75rem;
             }
 
             .bracket-container {
@@ -419,17 +444,27 @@
             }
 
             .group {
-                padding: 16px;
+                padding: 12px;
             }
 
             .group-header {
-                font-size: 1.1rem;
+                font-size: 1rem;
+                margin-bottom: 12px;
+            }
+
+            .standings-table table {
+                min-width: 500px;
             }
 
             .standings-table th,
             .standings-table td {
                 padding: 8px 4px;
-                font-size: 0.75rem;
+                font-size: 0.7rem;
+            }
+
+            .standings-table th:nth-child(2),
+            .standings-table td:nth-child(2) {
+                min-width: 100px;
             }
         }
     </style>
