--- a/index.html
+++ b/index.html
@@ -204,21 +204,21 @@
         }
 
         .standings-table th:first-child {
-            width: 6%;
+            width: 5%;
         }
 
         .standings-table th:nth-child(2) {
-            width: 28%;
+            width: auto;
             text-align: left;
             padding-left: 8px;
         }
 
         .standings-table th:not(:first-child):not(:nth-child(2)) {
-            width: 8.25%;
+            width: 7%;
         }
 
         .standings-table td {
-            padding: 10px 4px;
+            padding: 10px 2px;
             border-bottom: 1px solid rgba(255,255,255,0.05);
             font-size: clamp(0.7rem, 1.5vw, 0.85rem);
             text-align: center;
@@ -227,6 +227,7 @@
         .standings-table td:nth-child(2) {
             text-align: left;
             padding-left: 8px;
+            padding-right: 8px;
             font-weight: 600;
         }
 
@@ -253,6 +254,11 @@
         .qualified {
             background: rgba(34, 197, 94, 0.1) !important;
             border-left: 3px solid #22c55e !important;
+        }
+
+        .qualified-second {
+            background: rgba(234, 179, 8, 0.1) !important;
+            border-left: 3px solid #eab308 !important;
         }
 
         /* Modern Playoff Bracket */
@@ -621,7 +627,7 @@
                         </thead>
                         <tbody>
                             ${sorted.map(([team, stats], index) => `
-                                <tr class="${index < 3 ? 'qualified' : ''}">
+                                <tr class="${index === 0 ? 'qualified' : index === 1 || index === 2 ? 'qualified-second' : ''}">
                                     <td class="position">${index + 1}</td>
                                     <td><strong>${team}</strong></td>
                                     <td>${stats.played || 0}</td>
