--- a/index.html
+++ b/index.html
@@ -780,19 +780,20 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>#</th>
-                            <th>მოთამაშე</th>
-                            <th>გუნდი</th>
-                            <th>გოლები</th>
+                            <th style="width: 8%;">#</th>
+                            <th style="width: auto; text-align: left;">მოთამაშე</th>
+                            <th style="width: 20%; text-align: right;">გოლები</th>
                         </tr>
                     </thead>
                     <tbody>
                         ${sortedScorers.map((scorer, index) => `
                             <tr>
                                 <td class="position">${index + 1}</td>
-                                <td><strong>${scorer.player}</strong></td>
-                                <td>${scorer.team}</td>
-                                <td><strong>${scorer.goals}</strong></td>
+                                <td style="text-align: left; padding-left: 8px;">
+                                    <strong>${scorer.player}</strong>
+                                    <div style="font-size: 0.75em; color: rgba(255,255,255,0.5); margin-top: 2px;">${scorer.team}</div>
+                                </td>
+                                <td style="text-align: right; padding-right: 8px;"><strong>${scorer.goals}</strong></td>
                             </tr>
                         `).join('')}
                     </tbody>
